src/test/ui/issues/issue-5XXXX/issue-54943.stderr
error[E0477]: the type `&'a u32` does not fulfill the required lifetime
  --> $DIR/issue-54943.rs:6:13
   |
LL |     let x = foo::<&'a u32>();
   |             ^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/issue-54943.rs:1:11
   |
LL | fn foo<T: 'static>() { }
   |           ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0477`.
